fixed hamburger menu 2

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <nav class="navbar" role="navigation" aria-label="Main navigation">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="#home" class="nav-link active" aria-label="notRinn Game Services Home">
+                <a href="#home" aria-label="notRinn Game Services Home">
                     <img src="img/logo.png" alt="notRinn Game Services Logo" class="logo-img" width="40" height="40">
                     <span>notRinn Game Services</span>
                 </a>
